Fix positioning issues

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.chart-container {
+  position: relative;
+  width: 100%;
+  max-width: 600px; 
+  height: 400px;   
+}
